feat: migration from old new Long constructor